test_support_headers generates without error

--- a/src/nunavut/lang/properties.ini
+++ b/src/nunavut/lang/properties.ini
@@ -231,13 +231,13 @@ stropping_suffix = ${nunavut.lang.c:stropping_suffix}
 use_standard_types = ${nunavut.lang.c:use_standard_types}
 named_types =
     unsigned_length = std::size_t
-    boolean = bool
+    unsigned_bit_length = std::size_t
     byte = std::uint8_t
     byte_ptr = std::uint8_t*
+    unsigned_port = std::uint16_t
+    error_type = int8_t
 named_values =
-    true = true
-    false = false
-    null = nullptr
+    unused = (void)
 options = ${nunavut.lang.c:options}
 
 [nunavut.lang.py]
