progress on c++ POD generation

--- a/src/nunavut/lang/properties.ini
+++ b/src/nunavut/lang/properties.ini
@@ -230,6 +230,7 @@ stropping_prefix = ${nunavut.lang.c:stropping_prefix}
 stropping_suffix = ${nunavut.lang.c:stropping_suffix}
 use_standard_types = ${nunavut.lang.c:use_standard_types}
 named_types =
+    boolean = bool
     unsigned_length = std::size_t
     unsigned_bit_length = std::size_t
     byte = std::uint8_t
@@ -238,7 +239,11 @@ named_types =
     error_type = int8_t
 named_values =
     unused = (void)
-options = ${nunavut.lang.c:options}
+options =
+    target_endianness = any
+    omit_float_serialization_support = false
+    enable_serialization_asserts = false
+    std = 11
 
 [nunavut.lang.py]
 extension = .py
