--- a/src/nunavut/lang/properties.ini
+++ b/src/nunavut/lang/properties.ini
@@ -205,8 +205,8 @@ named_types =
     float_32 = float
     float_64 = double
 named_values =
-    true = true
-    false = false
+    true = "true"
+    false = "false"
     null = NULL
 options =
     target_endianness = any
