fixing builds and adding platoform info to generated headers

--- a/src/nunavut/lang/properties.ini
+++ b/src/nunavut/lang/properties.ini
@@ -205,6 +205,8 @@ named_types =
     float_32 = float
     float_64 = double
 named_values =
+# note that quotes within a dictionary are forced
+# to string types by the lanugage options parser.
     true = "true"
     false = "false"
     null = NULL
