adding array type override

--- a/src/nunavut/lang/properties.ini
+++ b/src/nunavut/lang/properties.ini
@@ -223,7 +223,7 @@ has_standard_namespace_files = False
 namespace_is_composite_type = True
 support_namespace = ${nunavut.lang.c:support_namespace}
 indent = ${nunavut.lang.c:indent}
-# We reserve all C++ words in C to ensure interoperability.
+# We reserve all C words in C++ to ensure interoperability.
 reserved_identifiers =
     ${nunavut.lang.c:reserved_identifiers}
 enable_stropping = ${nunavut.lang.c:enable_stropping}
@@ -246,6 +246,7 @@ options =
     omit_float_serialization_support = false
     enable_serialization_asserts = false
     std = 11
+    variable_array_type = "std::vector<{TYPE},std::allocator<{TYPE}>>"
 
 [nunavut.lang.py]
 extension = .py
